--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "csv-parse": "^6.0.0",
     "express": "^5.1.0",
-    "papaparse": "^5.5.3"
+    "fs": "^0.0.1-security",
+    "papaparse": "^5.5.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
